--- a/WebApplication2/Views/Console/MyBooks.cshtml
+++ b/WebApplication2/Views/Console/MyBooks.cshtml
@@ -23,9 +23,9 @@
                         </div>
                         <div class="widget-body">
                             <div class="nav tag-cloud" id="genresdiv">
-                                <a href="javascript:void(0)"   onclick="buildBooksWithState(1)" >My Saved Favorites</a>
+                                <a href="javascript:void(0)"   onclick="buildBooksWithState(1)" >Want to Read</a>
                                 <a href="javascript:void(0)"   onclick="buildBooksWithState(2)">Currently Reading</a>
-                                <a href="javascript:void(0)"   onclick="buildBooksWithState(3)">Read List</a>
+                                <a href="javascript:void(0)"   onclick="buildBooksWithState(3)">Finished Reading</a>
                             </div>
                         </div>
                     </div>
